# peer-bonus

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20230506_init_tables.py  20250728_add_reactions_table.py  20250728_add_user_auth_fields.py
backend/app/: main.py
backend/app/api/: auth.py  health.py
backend/app/core/: auth.py  config.py  middleware.py  security.py
backend/app/db/: session.py
backend/app/graphql/: db_context.py  schema.py  sync_db.py  sync_repositories.py
backend/app/models/: base.py  kudos.py  reaction.py  user.py
backend/app/repository/: base_repository.py  kudos_repository.py  user_repository.py
backend/app/schemas/: __init__.py  auth.py  base.py  kudos.py  reaction.py  user.py
backend/app/services/: kudos_service.py  user_service.py
backend/db/: seed.sql
backend/tests/: conftest.py
frontend/: Dockerfile  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/auth/: page.tsx
frontend/src/app/feed/: page.tsx
frontend/src/components/: AppShell.tsx  Header.tsx  KudosCard.tsx  LoginForm.tsx  RegisterForm.tsx  SendKudosForm.tsx
frontend/src/components/ui/: avatar.tsx  card.tsx  combobox.tsx  command.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useClientSide.ts
frontend/tests/: page.test.tsx
